k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-demo-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.mern-k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-demo-k8s-backend
                port:
                  number: 80
    - host: "mern-k8s.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-demo-k8s-frontend
                port:
                  number: 80
  ingressClassName: nginx
